--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: "Inter", sans-serif;
+    color: #303030;
 }
 
 header {
@@ -25,7 +26,7 @@ header span {
 .main-section {
     /* Стили для первой секции */
     background-color: #fafaff;
-    padding: 60px 0;
+    padding: 60px 0px;
     min-height: 100vh;
 }
 
@@ -33,7 +34,6 @@ header span {
     /* Стили для заголовка в первой секции */
     font-weight: 700;
     font-size: 48px;
-    color: #303030;
     margin-bottom: 20px;
 }
 
@@ -41,65 +41,132 @@ header span {
     /* Стили для текста в первой секции */
     font-weight: 400;
     font-size: 18px;
-    color: #303030;
 }
 
 .main-image {
     /* Стили для изображения в первой секции */
-    max-width: 715pxn;
-    height: 508px;
+    max-width: 715px;
+    /* height: 508px; */
 }
 
 
 .about-section {
     /* Стили для второй секции */
+    background-color: #fff;
+    padding: 100px 0;
 }
 
 select {
     /* Стили для выпадающего списка */
+    border: 1px solid rgba(48, 48, 48, 0.3);
+    border-radius: 5px;
+    width: 150px;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 8px 0;
+    padding-left: 12px;
+
+
+    font-weight: 400;
+    font-size: 16px;
+
+    background: url(./assets/img/ep_arrow-down.svg) no-repeat right 15px top 50%;
+    appearance: none;
 }
 
 .section-title {
     /* Стили для заголовков во второй секции */
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 25px;
 }
 
 .frameworks-list {
     /* Стили для маркированного списка во второй секции */
+    padding-left: 20px;
+    font-weight: 400;
+    font-size: 16px;
+
+    list-style-image: url(./assets/img/solar_map-arrow-up-bold.svg);
+
+
 }
 
 .books-list {
     /* Стили для нумерованного списка во второй секции */
+    padding-left: 20px;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .label {
     /* Стили для подписей чекбоксов */
+    font-weight: 400;
+    font-size: 16px;
+
 }
 
 .text-field {
     /* Стили для односточного поля ввода текста */
+    padding: 8px 0;
+    padding-left: 12px;
+    border: 1px solid rgba(48, 48, 48, 0.3);
+    border-radius: 5px;
+    width: 330px;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .btn {
     /* Стили для кнопки */
+    font-weight: 700;
+    font-size: 14px;
+    padding: 10px 0;
+    color: #fff;
+
+    border-radius: 5px;
+    width: 125px;
+    background-color: #2965f1;
+    border: none;
 }
 
 .line {
     /* Стили для линии */
+    margin: 60px 0;
 }
 
 table {
     /* Стили для таблицы */
+    border-collapse: collapse;
+    border: 1px solid #95a1bb;
 }
+
 
 th,
 td {
     /* Стили для ячеек таблицы */
+    padding: 12px 14px;
+    font-weight: 400;
+    font-size: 14px;
+    min-width: 55px;
+}
+
+
+th {
+    font-weight: 700;
+    font-size: 14px;
+    text-align: center;
 }
 
 footer {
     /* Стили для футера */
+    background-color: rgba(163, 167, 255, 0.3);
+    padding: 26px 0;
 }
 
 .footer-link {
-    /* Стили для футера */
+    /* Стили для футера */    
+    font-weight: 400;
+    font-size: 14px;
+    color: #2965f1;
+    text-decoration: none;
 }
