--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ select {
 
 .frameworks-list {
     /* Стили для маркированного списка во второй секции */
-    padding-left: 20px;
+    padding:0 20px;
     font-weight: 400;
     font-size: 16px;
 
@@ -93,7 +93,7 @@ select {
 
 .books-list {
     /* Стили для нумерованного списка во второй секции */
-    padding-left: 20px;
+    padding:0 20px;
     font-weight: 400;
     font-size: 16px;
 }
@@ -138,13 +138,14 @@ table {
     /* Стили для таблицы */
     border-collapse: collapse;
     border: 1px solid #95a1bb;
+    font-size: 14px;
 }
 
 
 th,
 td {
     /* Стили для ячеек таблицы */
-    padding: 12px 14px;
+    padding: 12px 15px;
     font-weight: 400;
     font-size: 14px;
     min-width: 55px;
